hphp/test/vm/class_constant_array.php.exp
HipHop Fatal error: Arrays are not allowed in class constants in hphp/test/vm/class_constant_array.php on line 6
